--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,6 @@ ul {
 }
 
 .section {
-  background: var(--bg-black-900);
   min-height: 100vh;
   display: block;
   padding: 0 30px;
@@ -74,6 +73,12 @@ ul {
   transition: all 0.3s ease;
 }
 
+.section.about,
+.section.portfolio,
+.section.contact {
+  background: var(--bg-black-900);
+}
+
 .section.back-section {
   z-index: 3;
 }
@@ -82,10 +87,6 @@ ul {
   z-index: 4;
   opacity: 1;
   animation: slideSection 1s ease;
-}
-
-section.home {
-  background: transparent;
 }
 
 @keyframes slideSection {
